[package]
name = "nickel-jwt-session"
version = "0.4.0"
authors = [
	"Rasmus Kaj <kaj@kth.se>",
	"Carol Nichols <carol.nichols@gmail.com>"
]
description = "A nickel middleware for jwt-based user sessions."
repository = "https://github.com/kaj/nickel-jwt-session"
keywords = ["nickel", "jwt", "jsonwebtoken"]
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://rasmus.krats.se/doc/nickel-jwt-session/0.4.0/nickel_jwt_session/"

[dependencies]
nickel = "^0.9"
hyper = "^0.9"
plugin = "^0.2"
typemap = "^0.3"
jwt = "^0.4"
cookie = "^0.2"
rust-crypto = "^0.2"
env_logger = "^0.3"
log = "^0.3"
rustc-serialize = "^0.3"
